--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.3.3",
     "axios": "^1.7.4",
     "lucide-react": "^0.428.0",
     "next": "14.2.5",
