--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/node": "22.5.0",
+    "@types/react": "18.3.4",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "5.5.4"
   }
 }
