--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@clerk/nextjs": "^5.3.3",
     "axios": "^1.7.4",
     "lucide-react": "^0.428.0",
-    "next": "14.2.5",
+    "next": "^15.0.1-canary.1",
     "react": "^18",
     "react-dom": "^18"
   },
