--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@clerk/nextjs": "^5.3.3",
     "@stripe/react-stripe-js": "^2.8.1",
     "@stripe/stripe-js": "^4.9.0",
+    "stripe": "^13.2.0",
     "axios": "^1.7.4",
     "lucide-react": "^0.428.0",
     "next": "^15.0.1-canary.1",
